--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@ layout: default
 <div class="notfound-wrapper">
   <div class="notfound-content">
     <p>
-      Looks like you got lost.
+      Looks like you got four oh four
       <br>
-      Let's get you back to the <a href="{{ '/' | relative_url }}">homepage</a>!
+      Let's get you back to the <a href="{{ '/' | relative_url }}">homepage</a>
     </p>
   </div>
 </div>
