--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@ description: ""
 ---
 
 <div class="about {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <img src="{% asset 'about.jpg' @path %}" alt="About Kenneth header image" />
-  <h1>About me</h1>
+  <h1>越努力，越幸运</h1>
   <p>
 
   </p>
