--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@ description: ""
 ---
 
 <div class="about {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <h1>越努力，越幸运</h1>
+  <img src="{% asset 'about.jpg' @path %}" alt="About Nielsen Ramon header image" />
+  <h1>越努力越幸运</h1>
   <p>
-
+      生活不在别处，脚下即是前方
   </p>
 </div>
